Painting using Erase Alpha causes issues in the image editor window IF not using sRGB colourspace. #34967

Closed
opened 2013-04-13 05:50:25 +02:00 by Mike Sloman · 5 comments

%%%--- Operating System, Graphics card ---
OSX 10.7 ATI 4850HD

- Blender version with error, and version that worked ---

2.66.5 r55999 and also observed in 2.66a release

- Short description of error ---

When using the "show RGB only" viewing mode in the Image editor any section with alpha = 0 will show through as black when in any colour space model other than sRBG.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See attached file: AlphaPaintModeIssue.blend

  1. Observe the plane textured with internally packed png image. To the right in the Image editor in the "Show RGB only" display mode observe same image but with areas where Alpha is 0 being blacked out.

  2. Change Colour space mode to sRBG and observe image editor display works as described - RBG channels only.

  3. Change to any other Colour Space model and observe the black areas reappear.%%%

%%%--- Operating System, Graphics card --- OSX 10.7 ATI 4850HD - Blender version with error, and version that worked --- 2.66.5 r55999 and also observed in 2.66a release - Short description of error --- When using the "show RGB only" viewing mode in the Image editor any section with alpha = 0 will show through as black when in any colour space model other than sRBG. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See attached file: AlphaPaintModeIssue.blend 1. Observe the plane textured with internally packed png image. To the right in the Image editor in the "Show RGB only" display mode observe same image but with areas where Alpha is 0 being blacked out. 2. Change Colour space mode to sRBG and observe image editor display works as described - RBG channels only. 3. Change to any other Colour Space model and observe the black areas reappear.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%% Exported image appears to be fine when saved so it appears to be a internal display issue only.%%%

%%% Exported image appears to be fine when saved so it appears to be a internal display issue only.%%%

%%%Will check on this.%%%

%%%Will check on this.%%%

%%%Fixed in svn re56065. Thanks for the report, closing.%%%

%%%Fixed in svn re56065. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34967
No description provided.