Fix #34967: Display transform makes byte image with alpha=0 black

Skip premultiplication/de-premultiplication when acquiring display
buffer for a byte image. Will make conversion a bit faster also :)